k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: altshare
spec:
  selector:
    app: altshare
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
