k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: altshare-ingress
spec:
  ingressClassName: public
  rules:
  - host: share.3xjn.dev
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: altshare
            port:
              number: 80
      - pathType: Prefix
        path: /group
        backend:
          service:
            name: altshare
            port:
              number: 80
      - pathType: Prefix
        path: /groups
        backend:
          service:
            name: altshare
            port:
              number: 80
  tls:
  - hosts:
    - share.3xjn.dev
    secretName: altshare-tls-cert
